--- a/Audio/Audio/Base.lproj/Main.storyboard
+++ b/Audio/Audio/Base.lproj/Main.storyboard
@@ -17,22 +17,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="rpx-CC-rSF">
-                                <rect key="frame" x="42" y="84" width="330" height="241.5"/>
+                                <rect key="frame" x="12" y="84" width="390" height="241.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Audio Player" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dUo-v1-xMa">
-                                        <rect key="frame" x="100.5" y="0.0" width="129" height="29"/>
+                                        <rect key="frame" x="130.5" y="0.0" width="129" height="29"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="rF3-A9-rfs">
-                                        <rect key="frame" x="25" y="61" width="280" height="4"/>
+                                        <rect key="frame" x="55" y="61" width="280" height="4"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="280" id="fr6-0T-YIp"/>
                                         </constraints>
                                     </progressView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="105" translatesAutoresizingMaskIntoConstraints="NO" id="dnJ-x6-C9v">
-                                        <rect key="frame" x="12.5" y="97" width="305" height="20.5"/>
+                                        <rect key="frame" x="42.5" y="97" width="305" height="20.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="currentTime" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k6m-bq-wez">
                                                 <rect key="frame" x="0.0" y="0.0" width="100" height="20.5"/>
@@ -55,7 +55,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="80" translatesAutoresizingMaskIntoConstraints="NO" id="oHB-ct-zKm">
-                                        <rect key="frame" x="33" y="149.5" width="264" height="30"/>
+                                        <rect key="frame" x="63" y="149.5" width="264" height="30"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rBQ-8A-jgy">
                                                 <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
@@ -81,7 +81,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="65" translatesAutoresizingMaskIntoConstraints="NO" id="4Fr-Z8-wXw">
-                                        <rect key="frame" x="0.0" y="211.5" width="330" height="30"/>
+                                        <rect key="frame" x="0.0" y="211.5" width="390" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Volume" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bwn-E0-xot">
                                                 <rect key="frame" x="0.0" y="0.0" width="57" height="30"/>
@@ -90,7 +90,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="HCs-K1-djs">
-                                                <rect key="frame" x="120" y="0.0" width="212" height="31"/>
+                                                <rect key="frame" x="120" y="0.0" width="272" height="31"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="ubP-kE-nWA"/>
                                                 </constraints>
@@ -102,20 +102,64 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="KFh-kH-4q5">
+                                <rect key="frame" x="134.5" y="374" width="145.5" height="77"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="mlm-EG-PSJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="145.5" height="31"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Record" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nM1-5d-gcv">
+                                                <rect key="frame" x="0.0" y="0.0" width="62.5" height="31"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="2Gk-AH-hyX">
+                                                <rect key="frame" x="96.5" y="0.0" width="51" height="31"/>
+                                                <connections>
+                                                    <action selector="swRecordMode:" destination="BYZ-38-t0r" eventType="valueChanged" id="ZoC-sk-0QZ"/>
+                                                </connections>
+                                            </switch>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="49" translatesAutoresizingMaskIntoConstraints="NO" id="RM6-bN-UHK">
+                                        <rect key="frame" x="0.0" y="47" width="145.5" height="30"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ceW-Sg-92A">
+                                                <rect key="frame" x="0.0" y="0.0" width="50.5" height="30"/>
+                                                <state key="normal" title="Record"/>
+                                                <connections>
+                                                    <action selector="btnRecord:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Yhq-c0-1PF"/>
+                                                </connections>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dPa-66-wOd">
+                                                <rect key="frame" x="99.5" y="0.0" width="46" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="KFh-kH-4q5" firstAttribute="top" secondItem="rpx-CC-rSF" secondAttribute="bottom" constant="48.5" id="CtP-1x-KQ2"/>
                             <constraint firstItem="rpx-CC-rSF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="T6v-bo-OJg"/>
+                            <constraint firstItem="KFh-kH-4q5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bv8-gZ-73l"/>
                             <constraint firstItem="rpx-CC-rSF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kCE-06-N69"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="btnPause" destination="Ffb-OM-cuc" id="Yv6-cQ-mn7"/>
                         <outlet property="btnPlay" destination="rBQ-8A-jgy" id="FCU-Ch-Mp6"/>
+                        <outlet property="btnRecord" destination="ceW-Sg-92A" id="MEz-Ol-M2I"/>
                         <outlet property="btnStop" destination="2Zb-XI-Fng" id="Cen-2g-89b"/>
                         <outlet property="lblCurrentTime" destination="k6m-bq-wez" id="bSp-UU-zeZ"/>
                         <outlet property="lblEndTime" destination="vdT-gk-adr" id="5Uq-PL-9YP"/>
+                        <outlet property="lblRecordTime" destination="dPa-66-wOd" id="TtV-av-UWB"/>
                         <outlet property="pvProgressPlay" destination="rF3-A9-rfs" id="IVc-GH-Mrs"/>
                         <outlet property="slVolume" destination="HCs-K1-djs" id="gs1-9e-Ugs"/>
                     </connections>
