video player practice

--- a/MoviePlayer/MoviePlayer/Base.lproj/Main.storyboard
+++ b/MoviePlayer/MoviePlayer/Base.lproj/Main.storyboard
@@ -31,6 +31,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p7K-P4-n8a">
                                         <rect key="frame" x="0.0" y="32" width="382" height="313.5"/>
                                         <state key="normal" title="Button" image="FastTyping.jpg"/>
+                                        <connections>
+                                            <action selector="btnPlayInternalMovie:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BVF-8d-Xmb"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -49,6 +52,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jc9-me-uUZ">
                                         <rect key="frame" x="0.0" y="32" width="382" height="313.5"/>
                                         <state key="normal" title="Button" image="Fireworks.jpg"/>
+                                        <connections>
+                                            <action selector="btnPlayExternalMovie:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dh2-RZ-J0H"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
